# ez-assignment

./: .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  Secure_File_Sharing.postman_collection.json  alembic.ini  demo.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt
app/: auth.py  config.py  database.py  dependencies.py  email_service.py  main.py  models.py  schemas.py
app/routes/: auth.py  files.py
